@@ -1,3 +1,6 @@
+20131010 - fhabermann
+* added option to enable default rights for active user in permission panel
+
 20131006 - fhabermann
 * using javascript confirm to delete a file
 * added acl check on delete file in html template
